js/src/tests/test262/language/statements/class/elements/syntax/early-errors/invalid-names/method-outter-member-expression-bad-reference.js
DONOTEVALUATE
(
)
;
class
C
{
m
(
)
{
class
Outter
{
#
x
=
42
;
}
this
.
#
x
;
}
}
